--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,5 +23,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Baths, Turkish'
 - !lcc 'NA'
+- GITenberg
 title: The Turkish Bath, Its Design and Construction
 url: http://www.gutenberg.org/ebooks/30444
